# agent.py

./: README.md  calculator-agent.py  pyproject.toml  test_streaming.py
examples/: cli_agent.py  demo_email.py  paper_agent.py
src/agentpy/: agent.py  cli_agent.py  metaagent.py
